--- a/index.html
+++ b/index.html
@@ -8,16 +8,22 @@
 <h1>Dr. Maulik A. Dave, Ph.D.</h1>
 <p>Here all about my work history.</p>
 
-<h2>List of Reviews of Books / research Papers in the journal ACM Computing Reviews</h2>
+<h2>List of Reviews of Books / Research papers in the journal ACM Computing Reviews</h2>
 
 <table  style="width:100%">
  <tr><th>Title of Book / Research Paper</th><th>Date Reviwed</th></tr>
  
- <tr><td>Transactional COM+ : building scalable applications
-Ewald T. (ed), Addison-Wesley Longman Ltd., Essex, UK, 2001. 436 pp. Type: Book (9780201615944)
+ <tr><td>A General Theory for Deadlock-Free Adaptive Routing Using a Mixed Set of Resources
+    Duato J., Pinkston T. IEEE Transactions on Parallel and Distributed Systems12 (12):1219-1235,2001.Type:Article
 </td>
-<td>2002-07-24</td>
+<td>2002-11-13</td>
 </tr>
+
+<tr><td>Transactional COM+ : building scalable applications
+    Ewald T. (ed), Addison-Wesley Longman Ltd., Essex, UK, 2001. 436 pp. Type: Book (9780201615944)
+    </td>
+    <td>2002-07-24</td>
+    </tr>
 
 </table>
 
