added a review in the list

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
             <th>Title of Book / Research Paper</th>
             <th>Date Reviwed</th>
         </tr>
-
+        <tr>
+            <td>Diagnosability of Crossed Cubes under the Comparison Diagnosis Model
+                Fan J. IEEE Transactions on Parallel and Distributed Systems13 (7):687-692,2002.Type:Article
+            </td>
+            <td>2003-02-07</td>
+        </tr>
         <tr>
             <td>Distributed-memory concepts in the wave model WAVEWATCH III
                 Tolman H. Parallel Computing28 (1):35-52,2002.Type:Article
@@ -41,8 +46,8 @@
         </tr>
 
     </table>
-<hr/>
-    Page last updated on 2025-01-28
+    <hr />
+    Page last updated on 2025-01-29
 </body>
 
 </html>
