--- a/vivechan.html
+++ b/vivechan.html
@@ -8,7 +8,7 @@
 <body>
 
     <h1>Dr. Maulik A. Dave, Ph.D.</h1>
-    <p>Here all about my work history.</p>
+    <p><a href="./index.html">Here all about my work history.</a></p>
 
     <h2>List of Reviews of Books / Research papers in the journal ACM Computing Reviews</h2>
 
@@ -47,7 +47,7 @@
 
     </table>
     <hr />
-    Page last updated on 2025-01-29
+    Page last updated on 2025-02-01
 </body>
 
 </html>
