--- a/index.html
+++ b/index.html
@@ -9,46 +9,23 @@
 
     <h1>Dr. Maulik A. Dave, Ph.D.</h1>
     <p>Here all about my work history.</p>
-    <a href="./vivechan.html">List of Reviews of Books / Research papers in the journal ACM Computing Reviews</a>
-
-    <h2>List of Reviews of Books / Research papers in the journal ACM Computing Reviews</h2>
-
-    <table style="width:100%">
-        <tr>
-            <th>Title of Book / Research Paper</th>
-            <th>Date Reviwed</th>
-        </tr>
-        <tr>
-            <td>Diagnosability of Crossed Cubes under the Comparison Diagnosis Model
-                Fan J. IEEE Transactions on Parallel and Distributed Systems13 (7):687-692,2002.Type:Article
-            </td>
-            <td>2003-02-07</td>
-        </tr>
-        <tr>
-            <td>Distributed-memory concepts in the wave model WAVEWATCH III
-                Tolman H. Parallel Computing28 (1):35-52,2002.Type:Article
-            </td>
-            <td>2002-12-02</td>
-        </tr>
-
-        <tr>
-            <td>A General Theory for Deadlock-Free Adaptive Routing Using a Mixed Set of Resources
-                Duato J., Pinkston T. IEEE Transactions on Parallel and Distributed Systems12
-                (12):1219-1235,2001.Type:Article
-            </td>
-            <td>2002-11-13</td>
-        </tr>
-
-        <tr>
-            <td>Transactional COM+ : building scalable applications
-                Ewald T. (ed), Addison-Wesley Longman Ltd., Essex, UK, 2001. 436 pp. Type: Book (9780201615944)
-            </td>
-            <td>2002-07-24</td>
-        </tr>
-
-    </table>
+    <h2>Research Work</h2>
+    <ul>
+        <li>
+            <a href="./vivechan.html">List of Reviews of Books / Research papers in the journal ACM Computing
+                Reviews</a>
+        </li>
+    </ul>
+    <h2>Professional / Employments</h2>
+    <ul>
+        <li>
+            <a href="http://www.linkedin.com/in/maulikadave">
+                Linked in Page for my employments, education, and certificates
+            </a>
+        </li>
+    </ul>
     <hr />
-    Page last updated on 2025-01-29
+    Page last updated on 2025-02-01
 </body>
 
 </html>
