review added in the list

--- a/vivechan.html
+++ b/vivechan.html
@@ -12,42 +12,47 @@
 
     <h2>List of Reviews of Books / Research papers in the journal ACM Computing Reviews</h2>
 
-    <table style="width:100%">
-        <tr>
-            <th>Title of Book / Research Paper</th>
-            <th>Date Reviwed</th>
-        </tr>
-        <tr>
-            <td>Diagnosability of Crossed Cubes under the Comparison Diagnosis Model
-                Fan J. IEEE Transactions on Parallel and Distributed Systems13 (7):687-692,2002.Type:Article
-            </td>
-            <td>2003-02-07</td>
-        </tr>
-        <tr>
-            <td>Distributed-memory concepts in the wave model WAVEWATCH III
-                Tolman H. Parallel Computing28 (1):35-52,2002.Type:Article
-            </td>
-            <td>2002-12-02</td>
-        </tr>
 
-        <tr>
-            <td>A General Theory for Deadlock-Free Adaptive Routing Using a Mixed Set of Resources
-                Duato J., Pinkston T. IEEE Transactions on Parallel and Distributed Systems12
-                (12):1219-1235,2001.Type:Article
-            </td>
-            <td>2002-11-13</td>
-        </tr>
 
-        <tr>
-            <td>Transactional COM+ : building scalable applications
-                Ewald T. (ed), Addison-Wesley Longman Ltd., Essex, UK, 2001. 436 pp. Type: Book (9780201615944)
-            </td>
-            <td>2002-07-24</td>
-        </tr>
+    <ol>
+        <li>
+            Stack inspection: Theory and variants
+            Fournet C., Gordon A. ACM Transactions on Programming Languages and Systems25 (3):360-399,2003.Type:Article
 
-    </table>
+            Date Reviewed: May 12 2003
+        </li>
+
+        <li>
+            Diagnosability of Crossed Cubes under the Comparison Diagnosis Model
+            Fan J. IEEE Transactions on Parallel and Distributed Systems13 (7):687-692,2002.Type:Article
+
+            Date Reviewed: Feb 7 2003
+        </li>
+        <li>
+
+            Distributed-memory concepts in the wave model WAVEWATCH III
+            Tolman H. Parallel Computing28 (1):35-52,2002.Type:Article
+
+            Date Reviewed: Dec 2 2002
+        </li>
+        <li>
+
+            A General Theory for Deadlock-Free Adaptive Routing Using a Mixed Set of Resources
+            Duato J., Pinkston T. IEEE Transactions on Parallel and Distributed Systems12
+            (12):1219-1235,2001.Type:Article
+
+            Date Reviewed: Nov 13 2002
+        </li>
+        <li>
+
+            Transactional COM+ : building scalable applications
+            Ewald T. (ed), Addison-Wesley Longman Ltd., Essex, UK, 2001. 436 pp. Type: Book (9780201615944)
+
+            Date Reviewed: Jul 24 2002
+        </li>
+    </ol>
     <hr />
-    Page last updated on 2025-02-01
+    Page last updated on 2025-09-01
 </body>
 
 </html>
