SIDACT News reviews added.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <h2>Research Work</h2>
     <ul>
         <li>
-            <a href="./vivechan.html">List of Reviews of Books / Research papers in the journal ACM Computing
+            <a href="./vivechan_cr.html">List of Reviews of Books / Research papers in the journal ACM Computing
                 Reviews</a>
+        </li>
+        <li>
+            <a href="./vivechan_sigact.html">List of Reviews of Books in the journal ACM SIGACT News
+            </a>
         </li>
     </ul>
     <h2>Professional / Employments</h2>
@@ -25,7 +29,7 @@
         </li>
     </ul>
     <hr />
-    Page last updated on 2025-02-01
+    Page last updated on 2025-02-19
 </body>
 
 </html>
