--- a/vivechan_sigact.html
+++ b/vivechan_sigact.html
@@ -12,88 +12,109 @@
 
 	<h2>List of Reviews of Books in the journal ACM SIGACT News</h2>
 
-	Book Reviews Columns when I was Book Review editor. All are SIGACT News.
+	All are published in SIGACT News.
 	<table border="" 1px">
-
 		<tr>
-			<td>Vol 42, No. 4, 2011
+			<th>SIGACT News Volume</th>
+			<th>Title of the Book Reviewed</th>
+		</tr>
+		<tr>
+			<td>Vol 42, No. 4, 2011</td>
+			<td>
 
-				Rippling: Meta-Level Guidance For Mathematical Reasoning by Alan Bundy, David Basin, Dieter Hutter, and
+				<b>Rippling: Meta-Level Guidance For Mathematical Reasoning</b><br /> by Alan Bundy, David Basin, Dieter
+				Hutter, and
 				Andrew Ireland. Review by Maulik Dave.
-				
+
 			</td>
 		</tr>
 
 		<tr>
-			<td>Vol 40, No. 4, 2009
+			<td>Vol 40, No. 4, 2009</td>
+			<td>
 
-				Theoretical and Experimental DNA Computation. By Martyn Amos. Review by Maulik Dave.
-				
+				<b>Theoretical and Experimental DNA Computation.</b><br /> By Martyn Amos. Review by Maulik Dave.
+
 			</td>
 		</tr>
 
 		<tr>
-			<td>Vol 39, No 3, 2008
+			<td>Vol 39, No 3, 2008</td>
+			<td>
 
-				Applied Combinatorics on Words by M. Lothaire. Review by Maulik Dave.
-
-			</td>
-		</tr>
-		<tr>
-			<td>Vol 39, No 2, 2008
-
-				Theoretical and Experimental DNA Computation By Martyn Amos. Review by Maulik Dave.
+				<b>Applied Combinatorics on Words</b><br /> by M. Lothaire. Review by Maulik Dave.
 
 			</td>
 		</tr>
 		<tr>
-			<td>Vol 39, No 1, 2008
+			<td>Vol 39, No 2, 2008</td>
+			<td>
 
-				Semantic Integration of Heterogeneous Software Specifications by Martin Grobe-Rhode. Review by Maulik
+				<b>Theoretical and Experimental DNA Computation</b><br /> By Martyn Amos. Review by Maulik Dave.
+
+			</td>
+		</tr>
+		<tr>
+			<td>Vol 39, No 1, 2008</td>
+			<td>
+
+				<b>Semantic Integration of Heterogeneous Software Specifications</b><br /> by Martin Grobe-Rhode. Review
+				by Maulik
 				Dave.
 
 			</td>
 		</tr>
 		<tr>
-			<td>Vol 37, No 4, 2006
-				Information Theory, Inference, and Learning Algorithms by David MacKay. Review by Maulik Dave.
-
-				Verification of Reactive Systems : Formal Methods and Algorithms by Klaus Schneider. Review by Maulik
+			<td>Vol 37, No 4, 2006</td>
+			<td>
+				<b>Information Theory, Inference, and Learning Algorithms</b><br /> by David MacKay. Review by Maulik
+				Dave.
+			</td>
+		<tr>
+			<td>Vol 37, No 4, 2006</td>
+			<td>
+				<b>Verification of Reactive Systems : Formal Methods and Algorithms</b><br /> by Klaus Schneider. Review
+				by Maulik
 				Dave.
 
 
 			</td>
 		</tr>
-		<
-		<tr>
-			<td>Vol 37, No 1, 2006
+		< <tr>
+			<td>Vol 37, No 1, 2006</td>
+			<td>
 
-				Secure Communicating Systems : Design, analysis, and implementation by Michael R A Huth. Review by
+				<b>Secure Communicating Systems : Design, analysis, and implementation</b><br /> by Michael R A Huth.
+				Review by
 				Maulik Dave.
 			</td>
-		</tr>
-		<tr>
-			<td>Vol 36, No 4, 2005
+			</tr>
+			<tr>
+				<td>Vol 36, No 4, 2005</td>
+				<td>
 
-				Data Structures, Near Neighbor Searches, and Methodology: Fifth and Sixth DIMACS Implementation
-				Challenge Edited by Michael Goldwasser, David Johnson, Catherine McGeoch. Review by Maulik Dave.
+					<b>Data Structures, Near Neighbor Searches, and Methodology: Fifth and Sixth DIMACS Implementation
+						Challenge</b><br /> Edited by Michael Goldwasser, David Johnson, Catherine McGeoch. Review by
+					Maulik Dave.
 
-			</td>
-		</tr>
-		
-		
-		<tr>
-			<td>Vol 33, No 4, 2002
-	
-				The Clausal Theory of Types by David Wolfram (Not to be confused with Stephen Wolfram, whose book is
-				also reviewed in this column.) Review by Maulik Dave.
+				</td>
+			</tr>
 
-			</td>
-		</tr>
-		
+
+			<tr>
+				<td>Vol 33, No 4, 2002</td>
+				<td>
+
+					<b>The Clausal Theory of Types</b><br /> by David Wolfram (Not to be confused with Stephen Wolfram,
+					whose book is
+					also reviewed in this column.) Review by Maulik Dave.
+
+				</td>
+			</tr>
+
 	</table>
 	<hr />
-	Page last updated on 2025-02-26
+	Page last updated on 2025-02-27
 </body>
 
 </html>
