chess math reviews added

--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
     <h2>Research Work</h2>
     <ul>
         <li>
-            <a href="./vivechan_cr.html">List of Reviews of Books / Research papers in the journal ACM Computing
-                Reviews</a>
+            <a href="./vivechan_cr.html">List of Reviews of Books / Research papers 
+                in the journal ACM Computing Reviews</a>
         </li>
         <li>
-            <a href="./vivechan_sigact.html">List of Reviews of Books in the journal ACM SIGACT News
+            <a href="./vivechan_sigact.html">List of Reviews of Books 
+                in the journal ACM SIGACT News
+            </a>
+        </li>
+        <li>
+            <a href="./vivechan_math.html">List of Reviews of Research papers 
+                in the journal Mathematical Reviews (American Mathematical Society)
             </a>
         </li>
     </ul>
@@ -28,8 +34,16 @@
             </a>
         </li>
     </ul>
+    <h2>Reacreational Showcases</h2>
+    <ul>
+        <li>
+            <a href="./chess_com.html">
+                Statistics of Games played at chess.com website
+            </a>
+        </li>
+    </ul>
     <hr />
-    Page last updated on 2025-02-19
+    Page last updated on 2025-04-12
 </body>
 
 </html>
