lichess org added

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <h2>Reacreational Showcases</h2>
     <ul>
         <li>
-            <a href="./chess_com.html">
-                Statistics of Games played at chess.com website
+            <a href="./chess.html">
+                Chess games
             </a>
         </li>
     </ul>
