--- a/chess.html
+++ b/chess.html
@@ -12,7 +12,7 @@
 
 	<h2>Overview of statistics at chess.com</h2>
 
-	Current game level: Crystal
+	Current game level: Champion
 
 	<table border="" 1px">
 		<tr>
@@ -26,47 +26,47 @@
 		</tr>
 		<tr>
 			<td>Puzzles</td>
-			<td style="text-align: right;">139</td>
-			<td style="text-align: right;">107</td>
-			<td style="text-align: right;">1266</td>
-			<td style="text-align: right;">1266 on April 13, 2025</td>
+			<td style="text-align: right;">178</td>
+			<td style="text-align: right;">131</td>
+			<td style="text-align: right;">1451</td>
+			<td style="text-align: right;">1266 on April 25, 2025</td>
 			
 		</tr>
 		<tr>
-			<td>Rapid</td>
-			<td style="text-align: right;">156</td>
-			<td style="text-align: right;">80</td>
-			<td style="text-align: right;">846</td>
-			<td style="text-align: right;">846 on Apri2 11, 2025</td>
-			<td style="text-align: right;">559838</td>
-			<td style="text-align: right;">73.1 %</td>
+			<td>King of the Hill</td>
+			<td style="text-align: right;">56</td>
+			<td style="text-align: right;">18</td>
+			<td style="text-align: right;">631</td>
+			<td style="text-align: right;">631 on April 26, 2025</td>
+			<td style="text-align: right;">57751</td>
+			<td style="text-align: right;">69.7 %</td>
 		</tr>
 		<tr>
-			<td>King of the Hill</td>
-			<td style="text-align: right;">26</td>
-			<td style="text-align: right;">6</td>
-			<td style="text-align: right;">414</td>
-			<td style="text-align: right;">414 on April 13, 2025</td>
-			<td style="text-align: right;">105918</td>
-			<td style="text-align: right;">43 %</td>
+			<td>Rapid</td>
+			<td style="text-align: right;">229</td>
+			<td style="text-align: right;">109</td>
+			<td style="text-align: right;">778</td>
+			<td style="text-align: right;">853 on Apri2 14, 2025</td>
+			<td style="text-align: right;">6720785</td>
+			<td style="text-align: right;">68 %</td>
 		</tr>
 		<tr>
 			<td>Blitz</td>
-			<td style="text-align: right;">198</td>
-			<td style="text-align: right;">90</td>
-			<td style="text-align: right;">486</td>
+			<td style="text-align: right;">264</td>
+			<td style="text-align: right;">116</td>
+			<td style="text-align: right;">414</td>
 			<td style="text-align: right;">925 on Feb 22, 2025</td>
-			<td style="text-align: right;">5441680			</td>
-			<td style="text-align: right;">40 %</td>
+			<td style="text-align: right;">6170437</td>
+			<td style="text-align: right;">32.5 %</td>
 		</tr>
 		<tr>
 			<td>Daily</td>
-			<td style="text-align: right;">8</td>
-			<td style="text-align: right;">3</td>
-			<td style="text-align: right;">482</td>
+			<td style="text-align: right;">12</td>
+			<td style="text-align: right;">5</td>
+			<td style="text-align: right;">531</td>
 			<td style="text-align: right;">761 on March 21, 2025</td>
-			<td style="text-align: right;">5019063			</td>
-			<td style="text-align: right;">23.3 %</td>
+			<td style="text-align: right;">4851169</td>
+			<td style="text-align: right;">27.6 %</td>
 		</tr>
 		<tr>
 			<td>Bughouse</td>
@@ -74,17 +74,17 @@
 			<td style="text-align: right;">3</td>
 			<td style="text-align: right;">414</td>
 			<td style="text-align: right;">650 on March 14, 2025</td>
-			<td style="text-align: right;">89040</td>
-			<td style="text-align: right;">13.7 %</td>
+			<td style="text-align: right;">88320	</td>
+			<td style="text-align: right;">13.8 %</td>
 		</tr>
 		<tr>
 			<td>Bullet</td>
-			<td style="text-align: right;">303</td>
-			<td style="text-align: right;">116</td>
-			<td style="text-align: right;">174</td>
+			<td style="text-align: right;">416</td>
+			<td style="text-align: right;">163</td>
+			<td style="text-align: right;">118</td>
 			<td style="text-align: right;">460 on Feb 22, 2025</td>
-			<td style="text-align: right;">4608816</td>
-			<td style="text-align: right;">7,9 %</td>
+			<td style="text-align: right;">4899914</td>
+			<td style="text-align: right;">2.9 %</td>
 		</tr>
 		
 	</table>
@@ -106,27 +106,27 @@
 			<td style="text-align: right;">7</td>
 			<td style="text-align: right;">971</td>
 			<td style="text-align: right;">971 on April 12, 2025</td>
-			<td style="text-align: right;">14.5 %</td>
+			<td style="text-align: right;">14.3 %</td>
 		</tr>
 		<tr>
 			<td>Blitz</td>
-			<td style="text-align: right;">12</td>
-			<td style="text-align: right;">6</td>
-			<td style="text-align: right;">947</td>
-			<td style="text-align: right;"></td>
-			<td style="text-align: right;">9.7 %</td>
+			<td style="text-align: right;">15</td>
+			<td style="text-align: right;">7</td>
+			<td style="text-align: right;">917</td>
+			<td style="text-align: right;">951 on April 23, 2025</td>
+			<td style="text-align: right;">8.4 %</td>
 		</tr>
 		<tr>
 			<td>Bullet</td>
-			<td style="text-align: right;">29</td>
+			<td style="text-align: right;">30</td>
 			<td style="text-align: right;">4</td>
-			<td style="text-align: right;">675</td>
+			<td style="text-align: right;">658.48</td>
 			<td style="text-align: right;">852 on April 1, 2025</td>
-			<td style="text-align: right;">1.1 %</td>
+			<td style="text-align: right;">0.8 %</td>
 		</tr>
 	</table>
 	<hr />
-	Page last updated on 2025-04-13
+	Page last updated on 2025-04-27
 </body>
 
 </html>
