--- a/chess.html
+++ b/chess.html
@@ -12,121 +12,78 @@
 
 	<h2>Overview of statistics at chess.com</h2>
 
-	Current game level: Champion
+	League Game level: Legend
 
 	<table border="" 1px">
 		<tr>
-			<th>Game Type</th>
-			<th>No. of Games Played</th>
-			<td style="text-align: right;">No. Games Won</td>
-			<th>Current Rating</th>
-			<th>Highest Rating</th>
-			<th>Global Rank</th>
-			<th>Percentile</th>
+			<th>Rating</th>
 		</tr>
 		<tr>
+			<td style="text-align: right;">1200-1400</td>
 			<td>Puzzles</td>
-			<td style="text-align: right;">178</td>
-			<td style="text-align: right;">131</td>
-			<td style="text-align: right;">1451</td>
-			<td style="text-align: right;">1266 on April 25, 2025</td>
-			
 		</tr>
 		<tr>
-			<td>King of the Hill</td>
-			<td style="text-align: right;">56</td>
-			<td style="text-align: right;">18</td>
-			<td style="text-align: right;">631</td>
-			<td style="text-align: right;">631 on April 26, 2025</td>
-			<td style="text-align: right;">57751</td>
-			<td style="text-align: right;">69.7 %</td>
+			<td style="text-align: right;">1000-1200</td>
 		</tr>
 		<tr>
+			<td style="text-align: right;">800-1000</td>
+		</tr>
+		<tr>
+			<td style="text-align: right;">600-800</td>
 			<td>Rapid</td>
-			<td style="text-align: right;">229</td>
-			<td style="text-align: right;">109</td>
-			<td style="text-align: right;">778</td>
-			<td style="text-align: right;">853 on Apri2 14, 2025</td>
-			<td style="text-align: right;">6720785</td>
-			<td style="text-align: right;">68 %</td>
+			<td>Live 960</td>
+			<td>3 Check</td>
+			<td>King of the Hill</td>
 		</tr>
 		<tr>
-			<td>Blitz</td>
-			<td style="text-align: right;">264</td>
-			<td style="text-align: right;">116</td>
-			<td style="text-align: right;">414</td>
-			<td style="text-align: right;">925 on Feb 22, 2025</td>
-			<td style="text-align: right;">6170437</td>
-			<td style="text-align: right;">32.5 %</td>
-		</tr>
-		<tr>
+			<td style="text-align: right;">400-600</td>
 			<td>Daily</td>
-			<td style="text-align: right;">12</td>
-			<td style="text-align: right;">5</td>
-			<td style="text-align: right;">531</td>
-			<td style="text-align: right;">761 on March 21, 2025</td>
-			<td style="text-align: right;">4851169</td>
-			<td style="text-align: right;">27.6 %</td>
-		</tr>
-		<tr>
+			<td>Blitz</td>
+			<td>Crazyhouse</td>
 			<td>Bughouse</td>
-			<td style="text-align: right;">9</td>
-			<td style="text-align: right;">3</td>
-			<td style="text-align: right;">414</td>
-			<td style="text-align: right;">650 on March 14, 2025</td>
-			<td style="text-align: right;">88320	</td>
-			<td style="text-align: right;">13.8 %</td>
 		</tr>
 		<tr>
+			<td style="text-align: right;">200-400</td>
+		</tr>
+		<tr>
+			<td style="text-align: right;">0-200</td>
 			<td>Bullet</td>
-			<td style="text-align: right;">416</td>
-			<td style="text-align: right;">163</td>
-			<td style="text-align: right;">118</td>
-			<td style="text-align: right;">460 on Feb 22, 2025</td>
-			<td style="text-align: right;">4899914</td>
-			<td style="text-align: right;">2.9 %</td>
+			<td>Puzzle Rush</td>
 		</tr>
 		
 	</table>
 
 	<h2>Overview of statistics at lichess.org</h2>
+<table border="" 1px">
+		<tr>
+			<th>Rating</th>
+		</tr>
+		<tr>
+			<td style="text-align: right;">800-1000</td>
+			<td>BLITZ</td>
+			<td>RAPID</td>
+			<td>CLASSICAL?</td>
+		</tr>
+		<tr>
+			<td style="text-align: right;">600-800</td>
+			<td>BULLET</td>
+		</tr>
+		<tr>
+			<td style="text-align: right;">400-600</td>
+			
+		</tr>
+		<tr>
+			<td style="text-align: right;">200-400</td>
+		</tr>
+		<tr>
+			<td style="text-align: right;">0-200</td>
 
-	<table border="" 1px">
-		<tr>
-			<th>Game Type</th>
-			<th>No. of Games Played</th>
-			<th>Victories</th>
-			<th>Current Rating</th>
-			<th>Highest Rating</th>
-			<th>Better than _ of players</th>
 		</tr>
-		<tr>
-			<td>Rapid</td>
-			<td style="text-align: right;">13</td>
-			<td style="text-align: right;">7</td>
-			<td style="text-align: right;">971</td>
-			<td style="text-align: right;">971 on April 12, 2025</td>
-			<td style="text-align: right;">14.3 %</td>
-		</tr>
-		<tr>
-			<td>Blitz</td>
-			<td style="text-align: right;">15</td>
-			<td style="text-align: right;">7</td>
-			<td style="text-align: right;">917</td>
-			<td style="text-align: right;">951 on April 23, 2025</td>
-			<td style="text-align: right;">8.4 %</td>
-		</tr>
-		<tr>
-			<td>Bullet</td>
-			<td style="text-align: right;">30</td>
-			<td style="text-align: right;">4</td>
-			<td style="text-align: right;">658.48</td>
-			<td style="text-align: right;">852 on April 1, 2025</td>
-			<td style="text-align: right;">0.8 %</td>
-		</tr>
+		
 	</table>
+	
 	<hr />
-	Page last updated on 2025-04-27
+	Page last updated on 2025-05-27
 </body>
 
 </html>
