--- a/chess.html
+++ b/chess.html
@@ -19,35 +19,31 @@
 			<th>Rating</th>
 		</tr>
 		<tr>
-			<td style="text-align: right;">1200-1400</td>
+			<td style="text-align: right;">1200-1600</td>
 			<td>Puzzles</td>
+			<td>CHESS 960 BLITZ</td>
+			<td>KING OF THE HILL BLITZ</td>
+			<td>FOG OF THE WAR BLITZ</td>
+			<td>ATOMIC BLITZ</td>
+			<td>GIVEAWAY BLITZ</td>
+			<td>COMPOSED</td>
 		</tr>
 		<tr>
-			<td style="text-align: right;">1000-1200</td>
-		</tr>
-		<tr>
-			<td style="text-align: right;">800-1000</td>
+			<td style="text-align: right;">800-1200</td>
 			<td>Live 960</td>
 			<td>3 Check</td>
 			<td>Crazyhouse</td>
 		</tr>
 		<tr>
-			<td style="text-align: right;">600-800</td>
+			<td style="text-align: right;">400-800</td>
 			<td>Rapid</td>
 			<td>King of the Hill</td>
-		</tr>
-		<tr>
-			<td style="text-align: right;">400-600</td>
 			<td>Daily</td>
 			<td>Blitz</td>
-			
 			<td>Bughouse</td>
 		</tr>
 		<tr>
-			<td style="text-align: right;">200-400</td>
-		</tr>
-		<tr>
-			<td style="text-align: right;">0-200</td>
+			<td style="text-align: right;">0-400</td>
 			<td>Bullet</td>
 			<td>Puzzle Rush</td>
 		</tr>
@@ -60,31 +56,23 @@
 			<th>Rating</th>
 		</tr>
 		<tr>
-			<td style="text-align: right;">800-1000</td>
+			<td style="text-align: right;">800-1200</td>
 			<td>BLITZ</td>
 			<td>RAPID</td>
 			<td>CLASSICAL?</td>
 		</tr>
 		<tr>
-			<td style="text-align: right;">600-800</td>
-			<td>BULLET</td>
-		</tr>
-		<tr>
-			<td style="text-align: right;">400-600</td>
+			<td style="text-align: right;">400-800</td>
 			
 		</tr>
 		<tr>
-			<td style="text-align: right;">200-400</td>
-		</tr>
-		<tr>
-			<td style="text-align: right;">0-200</td>
-
+			<td style="text-align: right;">0-400</td>
 		</tr>
 		
 	</table>
 	
 	<hr />
-	Page last updated on 2025-05-29
+	Page last updated on 2025-06-01
 </body>
 
 </html>
