--- a/chess.html
+++ b/chess.html
@@ -19,28 +19,34 @@
 			<th>Rating</th>
 		</tr>
 		<tr>
+			<td style="text-align: right;">1600-2000</td>
+			<td>CHESS 960 BLITZ</td>
+		</tr>
+		<tr>
 			<td style="text-align: right;">1200-1600</td>
 			<td>Puzzles</td>
-			<td>CHESS 960 BLITZ</td>
 			<td>KING OF THE HILL BLITZ</td>
 			<td>FOG OF THE WAR BLITZ</td>
 			<td>ATOMIC BLITZ</td>
 			<td>GIVEAWAY BLITZ</td>
 			<td>COMPOSED</td>
+			<td>4 chess</td>
+			<td>CRAZYHOUSE RAPID</td>
+			<td>3 CHECH BLITZ</td>
 		</tr>
 		<tr>
 			<td style="text-align: right;">800-1200</td>
-			<td>Live 960</td>
 			<td>3 Check</td>
-			<td>Crazyhouse</td>
 		</tr>
 		<tr>
 			<td style="text-align: right;">400-800</td>
+			<td>Blitz</td>
 			<td>Rapid</td>
 			<td>King of the Hill</td>
 			<td>Daily</td>
-			<td>Blitz</td>
 			<td>Bughouse</td>
+			<td>Live 960</td>
+			<td>Crazyhouse</td>
 		</tr>
 		<tr>
 			<td style="text-align: right;">0-400</td>
@@ -72,7 +78,7 @@
 	</table>
 	
 	<hr />
-	Page last updated on 2025-06-01
+	Page last updated on 2025-06-27
 </body>
 
 </html>
