--- a/chess.html
+++ b/chess.html
@@ -14,50 +14,212 @@
 
 	League Game level: Legend
 
-	<table border="" 1px">
+	<table>
 		<tr>
-			<th>Rating</th>
+			<th>Bullet</th>
+			<td colspan="3">Bullet matches have time restrictions of 1 or 2 minutes</td>
 		</tr>
+		<tr>
+			<td></td>
+			<th>Rating on June 29, 2025</th>
+			<td>223</td>
+			<td>**</td>
+		</tr>
+		<tr>
+			<td></td>
+			<th>Highest Rating on February 22, 2025</th>
+			<td>460</td>
+			<td>****</td>
+		</tr>
+		<tr>
+			<td></td>
+			<th>No. of games played</th>
+			<td>755</td>
+			<td>*******</td>
+		</tr>
+		<tr>
+			<td></td>
+			<th>Games won/drawn/lost</th>
+			<td>289/11/455</td>
+			<td>**</td>
+		</tr>
+		<tr>
+			<th>Blitz</th>
+			<td colspan="2">Blitz matches have time restrictions of 3 or 5 minutes</td>
+		</tr>
+		<tr>
+			<td></td>
+			<th>Rating on June 29, 2025</th>
+			<td>511</td>
+			<td>*****</td>
+		</tr>
+		<tr>
+			<td></td>
+			<th>Highest Rating on February 22, 2025</th>
+			<td>814</td>
+			<td>********</td>
+		</tr>
+		<tr>
+			<td></td>
+			<th>No. of games played</th>
+			<td>628</td>
+			<td>******</td>
+		</tr>
+		<tr>
+			<td></td>
+			<th>Games won/drawn/lost</th>
+			<td>257/23/348</td>
+			<td>**</td>
+		</tr>
+		<tr>
+			<th>Rapid</th>
+			<td colspan="3">Rapid matches have time restrictions of 10 or 15 minutes</td>
+		</tr>
+		<tr>
+			<td></td>
+			<th>Rating on June 29, 2025</th>
+			<td>813</td>
+			<td>********</td>
+		</tr>
+		<tr>
+			<td></td>
+			<th>Highest Rating on June 29, 2025</th>
+			<td>813</td>
+			<td>********</td>
+		</tr>
+		<tr>
+			<td></td>
+			<th>No. of games played</th>
+			<td>369</td>
+			<td>***</td>
+		</tr>
+		<tr>
+			<td></td>
+			<th>Games won/drawn/lost</th>
+			<td>174/18/177</td>
+			<td>*</td>
+		</tr>
+		<tr>
+			<th>Daily</th>
+			<td colspan="3">Player can move at a convenient time</td>
+		</tr>
+		<tr>
+			<td></td>
+			<th>Rating on June 29, 2025</th>
+			<td>612</td>
+			<td>******</td>
+		</tr>
+		<tr>
+			<td></td>
+			<th>Highest Rating on March 21, 2025</th>
+			<td>761</td>
+			<td>*******</td>
+		</tr>
+		<tr>
+			<td></td>
+			<th>No. of games played</th>
+			<td>24</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<th>Games won/drawn/lost</th>
+			<td>10/0/14</td>
+			<td>**</td>
+		</tr>
+		<tr>
+			<th>Live 960</th>
+			<td colspan="3">Initial arrangement of pieces are different than normal chess</td>
+		</tr>
+		<tr>
+			<td></td>
+			<th>Rating on June 29, 2025</th>
+			<td>681</td>
+			<td>******</td>
+		</tr>
+		<tr>
+			<th>3 Check</th>
+			<td colspan="3">Player can also win by giving 3 checks</td>
+		</tr>
+		<tr>
+			<td></td>
+			<th>Rating on June 29, 2025</th>
+			<td>796</td>
+			<td>*******</td>
+		</tr>
+		<tr>
+			<th>King of the Hill</th>
+			<td colspan="3">Player can also win by reaching king in the cetnter 4 squares</td>
+		</tr>
+		<tr>
+			<td></td>
+			<th>Rating on June 29, 2025</th>
+			<td>702</td>
+			<td>*******</td>
+		</tr>
+		<tr>
+			<th>Crazyhouse</th>
+			<td colspan="3">Captured pieces can be placed back</td>
+		</tr>
+		<tr>
+			<td></td>
+			<th>Rating on June 29, 2025</th>
+			<td>779</td>
+			<td>*******</td>
+		</tr>
+		<tr>
+			<th>Bughouse</th>
+			<td colspan="3">System generate pieces, which can be placed back</td>
+		</tr>
+		<tr>
+			<td></td>
+			<th>Rating on June 29, 2025</th>
+			<td>570</td>
+			<td>*****</td>
+		</tr>
+	</table>
+
+	<table border="" 1px">
+		<caption>Games for rating ranges</caption>
 		<tr>
 			<td style="text-align: right;">1600-2000</td>
 			<td>CHESS 960 BLITZ</td>
 		</tr>
 		<tr>
 			<td style="text-align: right;">1200-1600</td>
-			<td>Puzzles</td>
-			<td>KING OF THE HILL BLITZ</td>
-			<td>FOG OF THE WAR BLITZ</td>
-			<td>ATOMIC BLITZ</td>
-			<td>GIVEAWAY BLITZ</td>
-			<td>COMPOSED</td>
-			<td>4 chess</td>
-			<td>CRAZYHOUSE RAPID</td>
-			<td>3 CHECH BLITZ</td>
+			<td>Puzzles, 
+				KING OF THE HILL BLITZ, 
+				FOG OF THE WAR BLITZ,
+				ATOMIC BLITZ,
+				GIVEAWAY BLITZ,
+			COMPOSED,
+			4 chess,
+			CRAZYHOUSE RAPID,
+			3 CHECH BLITZ</td>
 		</tr>
 		<tr>
 			<td style="text-align: right;">800-1200</td>
-			<td>3 Check</td>
+			<td>Rapid</td>
 		</tr>
 		<tr>
 			<td style="text-align: right;">400-800</td>
-			<td>Blitz</td>
-			<td>Rapid</td>
-			<td>King of the Hill</td>
-			<td>Daily</td>
-			<td>Bughouse</td>
-			<td>Live 960</td>
-			<td>Crazyhouse</td>
+			<td>Blitz,
+			3 Check,
+			King of the Hill,
+			Daily,
+			Bughouse,
+			Live 960,
+			Crazyhouse</td>
 		</tr>
 		<tr>
 			<td style="text-align: right;">0-400</td>
-			<td>Bullet</td>
-			<td>Puzzle Rush</td>
+			<td>Bullet, Puzzle Rush</td>
 		</tr>
-		
+
 	</table>
 
 	<h2>Overview of statistics at lichess.org</h2>
-<table border="" 1px">
+	<table border="" 1px">
 		<tr>
 			<th>Rating</th>
 		</tr>
@@ -69,16 +231,16 @@
 		</tr>
 		<tr>
 			<td style="text-align: right;">400-800</td>
-			
+
 		</tr>
 		<tr>
 			<td style="text-align: right;">0-400</td>
 		</tr>
-		
+
 	</table>
-	
+
 	<hr />
-	Page last updated on 2025-06-27
+	Page last updated on 2025-06-29
 </body>
 
 </html>
