--- a/chess.html
+++ b/chess.html
@@ -14,168 +14,77 @@
 
 	League Game level: Legend
 
-	<table>
+	<table  border="" 1px">
+		<tr>
+			<th>Game Type</th>
+			<th>Description</th>
+			<th>Number of Games Played</th>
+			<th>Win Percentage</th>
+			<th>Rating</th>
+			<th>Global Rank Percentile</th>
+		</tr>
 		<tr>
 			<th>Bullet</th>
-			<td colspan="3">Bullet matches have time restrictions of 1 or 2 minutes</td>
+			<td>Bullet matches have time restrictions of 1 or 2 minutes</td>
+			<td>916</td>
+			<td>40 %</td>
+			<td>245</td><td>16.9 %</td>
 		</tr>
-		<tr>
-			<td></td>
-			<th>Rating on June 29, 2025</th>
-			<td>223</td>
-			<td>**</td>
-		</tr>
-		<tr>
-			<td></td>
-			<th>Highest Rating on February 22, 2025</th>
-			<td>460</td>
-			<td>****</td>
-		</tr>
-		<tr>
-			<td></td>
-			<th>No. of games played</th>
-			<td>755</td>
-			<td>*******</td>
-		</tr>
-		<tr>
-			<td></td>
-			<th>Games won/drawn/lost</th>
-			<td>289/11/455</td>
-			<td>**</td>
-		</tr>
+		
 		<tr>
 			<th>Blitz</th>
-			<td colspan="2">Blitz matches have time restrictions of 3 or 5 minutes</td>
-		</tr>
-		<tr>
-			<td></td>
-			<th>Rating on June 29, 2025</th>
-			<td>511</td>
-			<td>*****</td>
-		</tr>
-		<tr>
-			<td></td>
-			<th>Highest Rating on February 22, 2025</th>
-			<td>814</td>
-			<td>********</td>
-		</tr>
-		<tr>
-			<td></td>
-			<th>No. of games played</th>
-			<td>628</td>
-			<td>******</td>
-		</tr>
-		<tr>
-			<td></td>
-			<th>Games won/drawn/lost</th>
-			<td>257/23/348</td>
-			<td>**</td>
+			<td>Blitz matches have time restrictions of 3 or 5 minutes</td>
+			<td>716</td>
+			<td>42 %</td>
+			<td>534</td>
+			<td>47.9 %</td>
 		</tr>
 		<tr>
 			<th>Rapid</th>
-			<td colspan="3">Rapid matches have time restrictions of 10 or 15 minutes</td>
-		</tr>
-		<tr>
-			<td></td>
-			<th>Rating on June 29, 2025</th>
-			<td>813</td>
-			<td>********</td>
-		</tr>
-		<tr>
-			<td></td>
-			<th>Highest Rating on June 29, 2025</th>
-			<td>813</td>
-			<td>********</td>
-		</tr>
-		<tr>
-			<td></td>
-			<th>No. of games played</th>
-			<td>369</td>
-			<td>***</td>
-		</tr>
-		<tr>
-			<td></td>
-			<th>Games won/drawn/lost</th>
-			<td>174/18/177</td>
-			<td>*</td>
+			<td>Rapid matches have time restrictions of 10 or 15 minutes</td>
+			<td>430</td>
+			<td>47 %</td>
+			<td>747</td>
+			<td>66.8 %</td>
 		</tr>
 		<tr>
 			<th>Daily</th>
-			<td colspan="3">Player can move at a convenient time</td>
-		</tr>
-		<tr>
-			<td></td>
-			<th>Rating on June 29, 2025</th>
-			<td>612</td>
-			<td>******</td>
-		</tr>
-		<tr>
-			<td></td>
-			<th>Highest Rating on March 21, 2025</th>
-			<td>761</td>
-			<td>*******</td>
-		</tr>
-		<tr>
-			<td></td>
-			<th>No. of games played</th>
-			<td>24</td>
-			<td></td>
-		</tr>
-		<tr>
-			<td></td>
-			<th>Games won/drawn/lost</th>
-			<td>10/0/14</td>
-			<td>**</td>
+			<td>Player can move at a convenient time</td>
+			<td>45</td>
+			<td>56 %</td>
+			<td>745</td><td>64.2 %</td>
 		</tr>
 		<tr>
 			<th>Live 960</th>
-			<td colspan="3">Initial arrangement of pieces are different than normal chess</td>
-		</tr>
-		<tr>
-			<td></td>
-			<th>Rating on June 29, 2025</th>
-			<td>681</td>
-			<td>******</td>
+			<td>Initial arrangement of pieces are different than normal chess</td>
+			<td></td><td></td>
+			<td>642</td><td></td>
 		</tr>
 		<tr>
 			<th>3 Check</th>
-			<td colspan="3">Player can also win by giving 3 checks</td>
-		</tr>
-		<tr>
-			<td></td>
-			<th>Rating on June 29, 2025</th>
-			<td>796</td>
-			<td>*******</td>
+			<td>Player can also win by giving 3 checks</td>
+			<td></td><td></td>
+			<td>736</td><td>79.9 %</td>
 		</tr>
 		<tr>
 			<th>King of the Hill</th>
-			<td colspan="3">Player can also win by reaching king in the cetnter 4 squares</td>
-		</tr>
-		<tr>
-			<td></td>
-			<th>Rating on June 29, 2025</th>
-			<td>702</td>
-			<td>*******</td>
+			<td>Player can also win by reaching king in the cetnter 4 squares</td>
+			<td>154</td>
+			<td>34 %</td>
+			<td>735</td><td>83.7 %</td>
 		</tr>
 		<tr>
 			<th>Crazyhouse</th>
-			<td colspan="3">Captured pieces can be placed back</td>
-		</tr>
-		<tr>
-			<td></td>
-			<th>Rating on June 29, 2025</th>
-			<td>779</td>
-			<td>*******</td>
+			<td>Captured pieces can be placed back</td>
+			<td></td><td></td>
+			<td>822</td><td></td>
 		</tr>
 		<tr>
 			<th>Bughouse</th>
-			<td colspan="3">System generate pieces, which can be placed back</td>
-		</tr>
-		<tr>
-			<td></td>
-			<th>Rating on June 29, 2025</th>
-			<td>570</td>
-			<td>*****</td>
+			<td>System generate pieces, which can be placed back</td>
+			<td>42</td>
+			<td>40 %</td>
+			<td>649</td><td>41 %</td>
 		</tr>
 	</table>
 
@@ -199,7 +108,7 @@
 		</tr>
 		<tr>
 			<td style="text-align: right;">800-1200</td>
-			<td>Rapid</td>
+			<td>Crazyhouse</td>
 		</tr>
 		<tr>
 			<td style="text-align: right;">400-800</td>
@@ -209,7 +118,7 @@
 			Daily,
 			Bughouse,
 			Live 960,
-			Crazyhouse</td>
+			Rapid</td>
 		</tr>
 		<tr>
 			<td style="text-align: right;">0-400</td>
@@ -240,7 +149,7 @@
 	</table>
 
 	<hr />
-	Page last updated on 2025-06-29
+	Page last updated on 2025-08-02
 </body>
 
 </html>
