--- a/vivechan_cr.html
+++ b/vivechan_cr.html
@@ -13,10 +13,28 @@
 	<h2>List of Reviews of Books / Research papers in the journal ACM Computing Reviews</h2>
 	<table border="1px">
 		<tr>
-			<th>Review of</th>
+			<th>Review of</th> 
 			<th>Type</th>
 			<th>Reviewed on</th>
 			<th>Subject</th>
+		</tr>
+		<tr>
+			<td>
+				<b>
+					LLM engineer’s handbook: 
+					master the art of engineering large language models 
+					from concept to production
+				</b>
+				<br />
+				Iusztin P., Labonne M., Packt Publishing, Birmingham, UK, 2024. 522 pp. 
+				
+			</td>
+			<td>Book (9781836200062)
+			</td>
+
+			<td>July 21 2025
+			</td>
+			<td>Large Language Models</td>
 		</tr>
 		<tr>
 			<td>
@@ -1332,7 +1350,7 @@
 		</tr>
 	</table>
 	<hr />
-	Page last updated on 2025-02-18
+	Page last updated on 2025-08-02
 </body>
 
 </html>
